Add acceptance tests (black box tests)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,4 @@ enable_testing()
 ### Subdirectories ###
 add_subdirectory(libdictionarypath)
 add_subdirectory(sample)
+add_subdirectory(testcases)
