Replace Dictionary by a new created class

--- a/libdictionarypath/CMakeLists.txt
+++ b/libdictionarypath/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 3.6 FATAL_ERROR)
 
 add_library(DictionaryPath
         include/DictionaryPath/Dictionary.h src/Dictionary.cpp
+        include/DictionaryPath/DictionaryFactory.h src/DictionaryFactory.cpp
         include/DictionaryPath/DictionaryPath.h src/DictionaryPath.cpp
+        src/DefaultDictionary.h src/DefaultDictionary.cpp
         src/DefaultDijkstraAlgorithm.h src/DefaultDijkstraAlgorithm.cpp
         src/DefaultWordsGraph.h src/DefaultWordsGraph.cpp
         src/DijkstraAlgorithm.h
