--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 # https://github.com/ruslo/hunter/wiki/pkg.gtest
 hunter_add_package(GTest)
 find_package(GTest CONFIG REQUIRED)
+find_package(GMock CONFIG REQUIRED)
 
 # Add Boost package
 # https://github.com/ruslo/hunter/wiki/pkg.boost
