Reformat a bit libdictionarypath/CMakeLists.txt

--- a/libdictionarypath/CMakeLists.txt
+++ b/libdictionarypath/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.6 FATAL_ERROR)
 
+# library: "DictionaryPath"
 add_library(DictionaryPath
         include/DictionaryPath/Dictionary.h src/Dictionary.cpp
         include/DictionaryPath/DictionaryFactory.h src/DictionaryFactory.cpp
@@ -21,17 +22,20 @@ target_include_directories(DictionaryPath PUBLIC
         PRIVATE src)
 
 
-add_executable(WordsGraphTest
-        test/WordsGraphTest.cpp
-        test/MockDictionary.cpp
-        test/MockDictionary.h
-        test/FactoryMathod.h
-        )
-target_include_directories(WordsGraphTest PRIVATE src)
-target_link_libraries(WordsGraphTest GTest::main GMock::main DictionaryPath)
-add_test(NAME WordsGraphTest COMMAND WordsGraphTest)
-
+# test: "DictionaryTest"
 add_executable(DictionaryTest test/DictionaryTest.cpp)
 target_include_directories(DictionaryTest PRIVATE src)
 target_link_libraries(DictionaryTest GTest::main DictionaryPath)
 add_test(NAME DictionaryTest COMMAND DictionaryTest)
+
+
+# test: "WordsGraphTest"
+add_executable(WordsGraphTest
+        test/WordsGraphTest.cpp
+        test/MockDictionary.h test/MockDictionary.cpp
+        test/FactoryMathod.h
+        )
+# TODO: Move test/FactoryMathod.h to seperate header-only library.
+target_include_directories(WordsGraphTest PRIVATE src)
+target_link_libraries(WordsGraphTest GTest::main GMock::main DictionaryPath)
+add_test(NAME WordsGraphTest COMMAND WordsGraphTest)
